# custom-dns-server

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/dns/: mod.rs
src/packet/: byte_buffer.rs  byte_packet_buffer.rs  dns_header.rs  dns_question.rs  dns_record.rs  header.rs  message.rs  mod.rs  parse.rs  qname.rs  query_type.rs  question.rs  record.rs
src/parse/: byte_message_buffer.rs  dns_header.rs  dns_packet.rs  dns_qname.rs  dns_query_type.rs  dns_question.rs  dns_record.rs  mod.rs
test_data/: many_queries.pcap
