[package]
name = "custom-dns-server"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
cookie-factory = "0.3.3"
nom = "8.0.0"
rand = "0.9.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
ux = "0.1.6"
